--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     </ul>
 </main>
 </div>
-<p class="terms"><a href="https://freelance.ua/uk/user/astrakiller20/" target="blank"></a>&#169;Все права защищени компанией <span>Astra killer</span></a></p>
+<p class="terms"><a href="https://freelance.ua/uk/user/astrakiller20/" target="blank"></a>&#169;Усі права захищені компанієй <span>Astra killer</span></a></p>
 </body>
 </html>
