--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div style="height: 100px;width: 100px; align-items: center; ">1⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 100px;width: 10; align-items: center;">1⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div> 
+        <div style="height: 100px;width: 100px; align-items: center;">1⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div> 
       </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
