--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
  <div class="slider">
     <div class="slider__wrapper">
       <div class="slider__item">
-        <div style="height: 10;width: 10; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 10; margin: 0 auto;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 100; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 100;margin: 0 auto;align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 10; align-items: center; ">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 10; margin: 0 auto; ">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
         <div style="height: 10;width: 10; margin: 0 auto;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px></div> 
