--- a/index.html
+++ b/index.html
@@ -130,19 +130,23 @@
       text-align: center;
     }
   </style>
- <div class="slider">
+</head>
+
+<body>
+
+  <div class="slider">
     <div class="slider__wrapper">
       <div class="slider__item">
-        <div style="height: 10;width: 10; margin: 0 auto;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 10; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 10;margin: 0 auto;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px">
+        <div style="height: 10;width: 10; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
+        </div>
+      <div class="slider__item">
+        <div style="height: 10;width: 10; align-items: center; ">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 10; margin: 0 auto; ">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
-      </div>
-      <div class="slider__item">
-        <div style="height: 10;width: 10; margin: 0 auto;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px></div> 
+        <div style="height: 10;width: 10; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div> 
       </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
@@ -238,7 +242,8 @@
     }());
 
     var slider = multiItemSlider('.slider')
-    </script>
+
+  </script>
     </div>
 <p class="terms"><a href="https://freelance.ua/uk/user/astrakiller20/" target="blank">&#169;Усі права захищені компанієй <span>Astra killer</span></a></p>
 </body>
