--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-</head>
+<link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
+    </head>
 <body>
     <header>
     <p class="logo"><img src="./logo.png" alt="logo beeatiful" class="logo-img" width="175px" ></p> 
