--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Beeatiuful</title>
 <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-<link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
+<link rel="shortcut icon" type="image/png" href="./logo.png">
     </head>
 <body>
     <header>
