--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="container">
     <p class="decription">🌼🌼🌼Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo, architecto voluptate dolore laboriosam aspernatur voluptatum iure quisquam. Odio porro qui quam id nostrum. Numquam autem maxime omnis, id doloribus recusandae.</p>
     <ul>
-        <li class="link-item"><a href="https://www.instagram.com/beeatiful_/" target="blank"><img src="./instaw.png" alt="" class="link" width="75px"></a></li>
-        <li class="link-item"><a href="viber://chat?number=%2B380676828167" target="blank"><img src="./vaber.png" alt="" class="link" width="75px"></a></li>
-        <li class="link-item"><a href="https://api.whatsapp.com/send?phone=380987522514" target="blank"><img src="./whatapp.png" alt="" class="link" width="75px"></a></li>
-        <li class="link-item"><a href="#" target="blank"><img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" class="link" width="75px"></a></li>
-        <li class="link-item"><a href="tel:0676828167" target="blank"><img src="./kiyw.png" alt="" class="link" width="75px"></a></li>
-        <li class="link-item"><a href="mailto:olgavino972@gmail.com?subject=Заказ услуг у beeatiful&body=Здраствуйте!"><img src="./logo-gmail.png" alt="" width="75px" height="75px"></a></li>
+        <li class="link-item"><a href="https://www.instagram.com/beeatiful_/" target="blank"><img src="./instaw.png" alt="instagram link" class="link" width="75px"></a></li>
+        <li class="link-item"><a href="viber://chat?number=%2B380676828167" target="blank"><img src="./vaber.png" alt="viber link" class="link" width="75px"></a></li>
+        <li class="link-item"><a href="https://api.whatsapp.com/send?phone=380987522514" target="blank"><img src="./whatapp.png" alt="what's app link" class="link" width="75px"></a></li>
+        <li class="link-item"><a href="#" target="blank"><img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="messenger link" class="link" width="75px"></a></li>
+        <li class="link-item"><a href="tel:0676828167" target="blank"><img src="./kiyw.png" alt="phone link" class="link" width="75px"></a></li>
+        <li class="link-item"><a href="mailto:olgavino972@gmail.com?subject=Заказ услуг у beeatiful&body=Здраствуйте!"><img src="./logo-gmail.png" alt="gmail link" width="75px" height="75px"></a></li>
     </ul>
 </main>
 <style>
