--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beeatiuful</title>
-<link rel="stylesheet" href="./style.css">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-PQDPNNX');</script>
+<!-- End Google Tag Manager -->
+    <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link rel="shortcut icon" type="image/svg" href="./20201115_112936.png">
     <!-- Google Analytics -->
@@ -20,6 +27,10 @@ ga('send', 'pageview');
 <!-- End Google Analytics -->
     </head>
 <body>
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQDPNNX"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <header>
     <p class="logo"><img src="./logo.png" alt="logo beeatiful" class="logo-img" width="175px" ></p> 
 </header>
