--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="slider">
     <div class="slider__wrapper">
       <div class="slider__item">
-        <div style="height: 10;width: 10; align-items: center;">⠀<img src="./beeatiful1portfoliom.png" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 10; align-items: center; border-radius: 7px;">⠀<img src="./beeatiful1portfoliom.png" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
         <div style="height: 10;width: 10; align-items: center;">⠀<img src="./1200px-Facebook_Messenger_logo_2020.svg.png" alt="" height="200px" width="200px"></div>
