--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li class="link-item"><a href="tel:0676828167" target="blank"><img src="./kiyw.png" alt="phone link" class="link" width="75px"></a></li>
         <li class="link-item"><a href="mailto:olgavino972@gmail.com?subject=Заказ услуг у beeatiful&body=Здраствуйте!"><img src="./logo-gmail.png" alt="gmail link" width="75px" height="75px"></a></li>
     </ul>
-</main>
+<h1 class="name">🐝Портфолио🐝</h1>
+        </main>
 <style>
     /*!
      * chiefSlider (https://itchief.ru/lessons/php/feedback-form-for-website)
