--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div style="height: 10;width: 10; align-items: center; "><img src="./beeatiuful3potrfolio.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 10; align-items: center;"><img src="./Без" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div> 
+        <div style="height: 10;width: 10; align-items: center;"><img src="./Без имени-1.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div> 
         </div>
     </div>
     <a class="slider__control slider__control_left" href="#" role="button"></a>
