--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div style="height: 10;width: 10; align-items: center; border-radius: 7px;"><img src="./beeatiful1portfoliom.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div>
       </div>
       <div class="slider__item">
-        <div style="height: 10;width: 10; align-items: center;"><img src="./beeatiuful2potrfolio.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div>
+        <div style="height: 10;width: 10; align-items: center;"><img src="./beeatiuful2porfolio.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div>
         </div>
       <div class="slider__item">
         <div style="height: 10;width: 10; align-items: center; "><img src="./beeatiuful3potrfolio.png" style="border-radius: 7px; border: black 3px dashed;" alt="" height="200px" width="200px"></div>
